# officesassistant

./: .env.development  .env.production  .gitignore  BUILD_AND_PUBLISH.md  DESIGN_SPEC.md  DOCKER_DEPLOY.md  INSTALLATION.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SETUP.md  api_server.py  api_server_v2.py  build_all.sh  docker-compose.yml  main.py  pyproject.toml  quick_calendar_test.py  render.yaml  requirements-api.txt  start_backend.sh  start_flutter.sh  test_api.sh  test_availability.py  test_calendar.py  test_unified_api.sh
backend/: Dockerfile  api.py  main.py
calendar/: Dockerfile  server.py
flutter_app/: pubspec.yaml  run_web.sh
flutter_app/assets/: README.md
flutter_app/lib/: main.dart
flutter_app/lib/models/: message.dart
flutter_app/lib/screens/: chat_screen.dart  login_screen.dart
flutter_app/lib/services/: auth_service.dart  chat_service.dart
flutter_app/lib/theme/: app_theme.dart
flutter_app/lib/widgets/: chat_input.dart  message_bubble.dart  typing_indicator.dart  welcome_section.dart
flutter_app/web/: index.html
gmail/: Dockerfile  server.py  test_tools.py
mcpservers/: main.py
thecallagent/: Dockerfile  MCP_CONVERSION_DOCS.md  calling_agent.py  make_calls.py  outbound-trunk.json  server.py  test_mcp_client.py
