[project]
name = "officeagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "fastapi>=0.119.1",
    "langchain>=1.0.2",
    "langchain-community>=0.4",
    "langchain-google-genai>=3.0.1",
    "langchain-groq>=1.0.0",
    "langchain-mcp-adapters>=0.1.11",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.1",
    "ollama>=0.6.0",
    "openpyxl>=3.1.5",
    "pdfminer-six>=20250506",
    "python-docx>=1.2.0",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
